--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
-    <title>Emojiloader</title>
+    <title>emojigun</title>
   </head>
   <body>
     <noscript>
